--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
   },
   "dependencies": {
     "mongoose": "2.5.10",
-    "express": "2.5.8",
-    "jqtpl": "1.0.9"
+    "express": "2.5.8"
   },
   "devDependencies": {}
 }
