--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "dependencies": {
     "mongoose": "2.5.10",
-    "express": "2.5.8"
+    "express": "2.5.8",
+    "underscore": "1.3.1"
   },
   "devDependencies": {}
 }
