--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "mongoose": "2.5.10",
     "express": "2.5.8",
-    "underscore": "1.3.1"
+    "underscore": "1.3.1",
+    "moment": "1.4.0"
   },
   "devDependencies": {}
 }
